--- a/app/src/main/assets/produtos.html
+++ b/app/src/main/assets/produtos.html
@@ -69,24 +69,44 @@
 
 <script src="Bootstrap/js/bootstrap.bundle.js"></script>
 <script>
-
     function carregarProdutosDoBanco() {
-        // Recebe JSON do Android
+        if (typeof Android === "undefined") {
+            console.error("Android não está definido!");
+            return;
+        }
+
         const produtosJson = Android.getProdutosCartazista();
-        const produtos = JSON.parse(produtosJson);
+        console.log("JSON recebido do Android:", produtosJson);
+
+        let produtos;
+        try {
+            produtos = JSON.parse(produtosJson);
+        } catch (e) {
+            console.error("Erro ao parsear JSON:", e);
+            return;
+        }
 
         const listaDiv = document.getElementById('listaProdutos');
         listaDiv.innerHTML = ''; // limpar
 
         produtos.forEach(prod => {
             const div = document.createElement('div');
-            div.className = "mb-3 d-flex align-items-center";
+            div.className = "card mb-2 p-2 shadow-sm";
 
             div.innerHTML = `
-                <label class="form-label me-2" style="width: 250px;">${prod.descricao}</label>
-                <button class="btn btn-outline-secondary btn-sm me-1" type="button">-</button>
-                <input type="number" class="form-control form-control-sm me-1" value="0" min="0" style="width: 70px;">
-                <button class="btn btn-outline-secondary btn-sm me-2" type="button">+</button>
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <strong>${prod.descricao}</strong><br>
+                        <small>Código: ${prod.codigo}</small><br>
+                        <small>Embalagem: ${prod.embalagem}</small><br>
+                        <small>Preço unitário: R$ ${prod.preco.toFixed(2)}</small>
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <button class="btn btn-outline-secondary btn-sm me-1" type="button">-</button>
+                        <input type="number" class="form-control form-control-sm text-center me-1" value="0" min="0" style="width: 70px;">
+                        <button class="btn btn-outline-secondary btn-sm me-2" type="button">+</button>
+                    </div>
+                </div>
             `;
 
             listaDiv.appendChild(div);
@@ -102,7 +122,7 @@
 
     // Chama assim que a página carregar
     document.addEventListener("DOMContentLoaded", carregarProdutosDoBanco);
-
 </script>
+
 </body>
 </html>
